[package]
name = "work-smarter-sight-visualisation-nannou"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
eventsource = "0.5.0"
nannou = "0.18"
reqwest = { version = "0.10.4", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
